# ros2_ws3

./: .gitignore  frames_2025-12-09_17.30.01.gv  frames_2025-12-13_17.44.40.gv  frames_2025-12-13_17.57.16.gv  frames_2025-12-13_18.35.56.gv  frames_2025-12-16_16.29.55.gv  frames_2025-12-16_17.08.38.gv  frames_2026-01-18_13.36.49.gv  ros2_ws3.repos  setup_serial.sh  test_motor_raw.py
.claude/: settings.local.json
src/my_robot_nav/: CMakeLists.txt  package.xml
src/my_robot_nav/config/: ekf.yaml  nav2_params.yaml  nav2_params.yaml.bak  ps4_teleop.yaml  slam_params.yaml
src/my_robot_nav/firmware/ROSArduinoBridge/: ROSArduinoBridge.ino  commands.h  diff_controller.h  encoder_driver.h  encoder_driver.ino  motor_driver.h  motor_driver.ino
src/my_robot_nav/launch/: bringup.launch.py  drivers_only.launch.py  joy_teleop.launch.py  real_robot.launch.py  sim.launch.py  slam_nav.launch.py
src/my_robot_nav/rviz/: my_nav.rviz  nav2_default_view.rviz
src/my_robot_nav/src/: base_driver.py  calibrate_rotation.py  cmd_vel_to_targets.py  omni_odometry.py  return_home.py  scan_fixer.py
src/my_robot_nav/urdf/: my_car.urdf.xacro
src/my_robot_nav/world/: static_world.sdf
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: base.launch.py
src/vision/: CMakeLists.txt  package.xml
src/vision/launch/: follow_bringup.launch.py  vision.launch.py
src/vision/msg/: CamDetection.msg  CamDetections.msg
src/vision/scripts/: person_follower.py  person_follower_nav2.py  vision_node.py
src/voice/: CMakeLists.txt  package.xml
(+55 files in other folders)
